modified some issues concerning accessbility

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <div class="background-cover"></div>
-  <div class="container">
+  <main class="container">
     <div class="app-container">
       <div class="app-screen">
         <div class="user-details">
@@ -52,14 +52,14 @@
           </p>
           <div class="radio-box">
             <div class="time-container">
-              <input type="radio">
+              <input type="radio" aria-label="radio button">>
               <span>30 minutes walk</span>
             </div>
             <span>$29</span>
           </div>
           <div class="radio-box">
             <div class="time-container">
-              <input type="radio">
+              <input type="radio" aria-label="radio button">
               <span>1 hour walk</span>
             </div>
             <span>$49</span>
@@ -78,7 +78,7 @@
         your walker and book again all through the chat.
       </p>
     </div>
-  </div>
+  </main>
 
 </body>
 
